metadata/force-app/main/default/objects/Account/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>A</label>
    <length>40</length>
    <type>Text</type>
</CustomField>