metadata/force-app/main/default/objects/Account/fields/AAA__c.field-meta.xml
<CustomField>
    <fullName>AAA__c</fullName>
    <label>AAA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>never</fullName>
            </value>
            <value>
                <fullName>maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>