metadata/force-app/main/default/objects/Account/fields/b__c.field-meta.xml
<CustomField>
    <fullName>b__c</fullName>
    <defaultValue>false</defaultValue>
    <label>b</label>
    <type>Checkbox</type>
</CustomField>