metadata/force-app/main/default/objects/Account/fields/Custom_Account_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Custom_Account_Picklist__c</fullName>
    <description>Description Added</description>
    <label>Custom Account Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Old</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Borrowed</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>NEW PICKLIST VALUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>