metadata/force-app/main/default/objects/Account/fields/E__c.field-meta.xml
<CustomField>
    <fullName>E__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E</label>
    <type>Checkbox</type>
</CustomField>