metadata/force-app/main/default/objects/Account/fields/F__c.field-meta.xml
<CustomField>
    <fullName>F__c</fullName>
    <defaultValue>false</defaultValue>
    <label>F</label>
    <type>Checkbox</type>
</CustomField>