metadata/force-app/main/default/objects/Account/fields/G__c.field-meta.xml
<CustomField>
    <fullName>G__c</fullName>
    <defaultValue>false</defaultValue>
    <label>G</label>
    <type>Checkbox</type>
</CustomField>