metadata/force-app/main/default/objects/Account/fields/H__c.field-meta.xml
<CustomField>
    <fullName>H__c</fullName>
    <defaultValue>false</defaultValue>
    <label>H</label>
    <type>Checkbox</type>
</CustomField>