metadata/force-app/main/default/objects/Account/fields/I__c.field-meta.xml
<CustomField>
    <fullName>I__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I</label>
    <type>Checkbox</type>
</CustomField>