metadata/force-app/main/default/objects/Account/fields/J__c.field-meta.xml
<CustomField>
    <fullName>J__c</fullName>
    <label>J</label>
    <length>40</length>
    <type>Text</type>
</CustomField>