metadata/force-app/main/default/objects/Account/fields/K__c.field-meta.xml
<CustomField>
    <fullName>K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>K</label>
    <type>Checkbox</type>
</CustomField>