metadata/force-app/main/default/objects/Account/fields/New_Field_for_Test__c.field-meta.xml
<CustomField>
    <fullName>New_Field_for_Test__c</fullName>
    <label>New Field for Test</label>
    <length>40</length>
    <type>Text</type>
</CustomField>