metadata/force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Yes &amp; No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>