metadata/force-app/main/default/objects/Account/fields/X1__c.field-meta.xml
<CustomField>
    <fullName>X1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1</label>
    <type>Checkbox</type>
</CustomField>