metadata/force-app/main/default/objects/Account/fields/X6_27__c.field-meta.xml
<CustomField>
    <fullName>X6_27__c</fullName>
    <label>6/27</label>
    <length>40</length>
    <type>Text</type>
</CustomField>