metadata/force-app/main/default/objects/Account/validationRules/New_Validation_Rule_1.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Validation_Rule_1</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;abc&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>