metadata/force-app/main/default/objects/Account/validationRules/New_Validation_Rule_2.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Validation_Rule_2</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;123&apos;</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>