metadata/force-app/main/default/objects/Account/validationRules/valruleacct.validationRule-meta.xml
<ValidationRule>
    <fullName>valruleacct</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;123456&apos;</errorConditionFormula>
    <errorMessage>a</errorMessage>
</ValidationRule>