metadata/force-app/main/default/objects/Account/validationRules/ValRuleACCT1.validationRule-meta.xml
<ValidationRule>
    <fullName>ValRuleACCT1</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;ABC&apos;</errorConditionFormula>
    <errorMessage>Test</errorMessage>
</ValidationRule>