metadata/force-app/main/default/objects/Account/validationRules/valrulenewmay.validationRule-meta.xml
<ValidationRule>
    <fullName>valrulenewmay</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;abc&apos;</errorConditionFormula>
    <errorMessage>nn</errorMessage>
</ValidationRule>